Edited The team Members

--- a/index.html
+++ b/index.html
@@ -986,23 +986,7 @@
             </div>
         </div>
         <div class="row">
-            <!-- Team member: Emeritus Prof. Soga Sofola -->
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
-                <div class="team-member">
-                    <figure>
-                        <ul class="social">
-                            <li>
-                                <a href="https://www.linkedin.com/in/soga-sofola-44958215/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
-                            </li>
-                        </ul>
-                        <img src="images/image.png" alt="Emeritus Prof. Soga Sofola" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
-                    </figure>
-                    <div class="p-3">
-                        <h3>Emeritus Prof. Soga Sofola</h3>
-                        <span class="position">Director</span>
-                    </div>
-                </div>
-            </div>
+
             <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="team-member">
                     <figure>
@@ -1063,7 +1047,7 @@
                     </figure>
                     <div class="p-3">
                         <h3>Adeniyi Talabi</h3>
-                        <span class="position">Coach - Admin</span>
+                        <span class="position">Director/Team Lead</span>
                     </div>
                 </div>
             </div>
@@ -1329,7 +1313,7 @@
     </div>
 </section>-->
 <hr>
-<section class="applications">
+<!--<section class="applications">
     <h1 class="section-title">COMPETITIONS APPLICATIONS</h1>
     <div class="container">
         <h1 class="section-subtitle">FIRST Global Challenge</h1>
@@ -1339,7 +1323,7 @@
             </span>
         </div>
     </div>
-</section>
+</section>-->
 
 <section class="site-section bg-light" id="pricing-section">
     <div class="container">
