Chnaged Niyi's role and removed office location

--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
                     </figure>
                     <div class="p-3">
                         <h3>Adeniyi Talabi</h3>
-                        <span class="position">Director/Team Lead</span>
+                        <span class="position">Director & Team Lead</span>
                     </div>
                 </div>
             </div>
@@ -1413,7 +1413,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-sm-6 mb-5">
+                    <!--<div class="col-md-4 col-sm-6 mb-5">
                         <div class="contact-item text-center">
                             <div class="contact-icon mb-3">
                                 <i class="fas fa-map-marker-alt fa-2x text-primary"></i>
@@ -1421,7 +1421,7 @@
                             <h3 class="contact-title">Visit Us</h3>
                             <p>40, Johnson Street, Bode Thomas<br>Surulere, Lagos, Nigeria</p>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="col-md-4 col-sm-6 mb-5">
                         <div class="contact-item text-center">
                             <div class="contact-icon mb-3">
