added the applications to nav bar and corrected an id in the applications section

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                                     </ul>
                                 </li>
                                 <li><a href="#review-section" class="nav-link">Testimonial</a></li>
+                                <li><a href="#applications" class="nav-link">Applications</a></li>
                                 <li><a href="#faq-section" class="nav-link">FAQ</a></li>
                                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                                <li><a href="#apply-section" class="nav-link">Applications</a></li>
-                                <li><a href="./donate.html" class="nav-link">Donate</a></li>
+                                <!--<li><a href="./donate.html" class="nav-link">Donate</a></li>-->
 
                             </ul>
                         </nav>
@@ -1313,17 +1313,19 @@
     </div>
 </section>-->
 <hr>
-<!--<section class="applications">
-    <h1 class="section-title">COMPETITIONS APPLICATIONS</h1>
+<section id="applications">
+    <h1 class="section-title">APPLICATIONS</h1>
     <div class="container">
-        <h1 class="section-subtitle">FIRST Global Challenge</h1>
+        <h1 class="section-subtitle">ASEN ACADEMY</h1>
         <div class="application-box">
-            <span>
+            <a href="https://bit.ly/ASENAcademy" ><img class="applicationflyer"src="images\Academy.jpg" alt="ASEN Academy Application Flyer">  </a>
+            <!--<span>
                 <h1>APPLICATIONS ARE CLOSED</h1>
-            </span>
+            </span>-->
         </div>
     </div>
-</section>-->
+</section>
+<hr>
 
 <section class="site-section bg-light" id="pricing-section">
     <div class="container">
