Added alt text to all the images and removed extra images from images dir

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
                                 <a href="https://www.linkedin.com/in/roboglobal/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>
-                        <img src="images/remi2.png" alt="Mrs. Remi Willoughby, M.ED" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/remi2.png" alt="ASEN Director Mrs. Remi Willoughby, M.ED" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Mrs. Remi Willoughby, M.ED</h3>
@@ -1011,7 +1011,7 @@
                                 <a href="https://www.linkedin.com/in/faisal-jarmakani-b779b828/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>
-                        <img src="images/fj1.png" alt="Faisal Jarmakani" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/fj1.png" alt="ASEN Director Faisal Jarmakani" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Faisal Jarmakani</h3>
@@ -1027,7 +1027,7 @@
                                 <a href="https://www.linkedin.com/in/omar-jarmakani-a0255250/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>
-                        <img src="images/oj2.png" alt="Emeritus Prof. Soga Sofola" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/oj2.png" alt="ASEN Director Omar Jarmakani" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Omar Jarmakani</h3>
@@ -1043,7 +1043,7 @@
                                 <a href="https://www.linkedin.com/in/adeniyi-talabi/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>
-                        <img src="images/niyi.png" alt="Adeniyi Talabi" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/niyi.png" alt="ASEN Director and Team Lead Adeniyi Talabi" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Adeniyi Talabi</h3>
@@ -1059,7 +1059,7 @@
                                 <a href="https://www.linkedin.com/in/sunday-afariogun-367b8a149/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>
-                        <img src="images/sunday.png" alt="Sunday Afariogun" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/sunday.png" alt="ASEN Admin Coach Sunday Afariogun" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Sunday Afariogun</h3>
@@ -1075,7 +1075,7 @@
                                 <a href="https://www.linkedin.com/in/olayinka-ibikunle-robotics/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>
-                        <img src="images/yinka.png" alt="Olayinka Ibikunle" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/yinka.png" alt="ASEN Technical Coach Olayinka Ibikunle" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Olayinka Ibikunle</h3>
@@ -1091,7 +1091,7 @@
                                 <a href="https://www.linkedin.com/in/tanitolorun-akinyemi/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>
-                        <img src="images/tani.png" alt="Tanitolorun Akinyemi" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/tani.png" alt="ASEN Technical Coach Tanitolorun Akinyemi" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Tanitolorun Akinyemi</h3>
@@ -1107,7 +1107,7 @@
                                 <a href="https://www.linkedin.com/in/tanitolorun-akinyemi/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
                             </li>
                         </ul>-->
-                        <img src="images/tireni.jpg" alt="Tanitolorun Akinyemi" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/tireni.jpg" alt="ASEN Technical Coach Tirenioluwa Shobande" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Tirenioluwa Shobande</h3>
@@ -1118,12 +1118,7 @@
             <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="team-member">
                     <figure>
-                        <!--<ul class="social">
-                            <li>
-                                <a href="https://www.linkedin.com/in/tanitolorun-akinyemi/" class="nav-link external-link"><span class="fa fa-linkedin"></span></a>
-                            </li>
-                        </ul>-->
-                        <img src="images/tofunmi2.jpg" alt="Tofunmi Olusodo" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/tofunmi2.jpg" alt="ASEN Voluteer Tofunmi Olusodo" class="img-fluid team-member-img" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </figure>
                     <div class="p-3">
                         <h3>Tofunmi Olusodo</h3>
@@ -1180,7 +1175,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/ayo1.png" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/ayo1.png" alt="ASEN ALUMNI AYO" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Ayomide Adetunji - Drexel University, Cybersecurity Major</p>
                 </figure>
@@ -1197,7 +1192,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/seun1.png" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="3029663667" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/seun1.png" alt="ASEN ALUMNI SEUN" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="3029663667" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Oluwaseun Omotayo - Gopuff Product Manager
                     </p>
@@ -1214,7 +1209,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/tawa.jpg" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/tawa.jpg" alt="ASEN Alumni Tawa" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="3324163588" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Tawa Giwa - Boise State University, Mechanical Engineering Major</p>
                 </figure>
@@ -1230,7 +1225,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/dodie1.png" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/dodie1.png" alt="ASEN ALUMNI Dodie" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Udodirim Iroaganachi - Microsoft Product Manager</p>
                 </figure>
@@ -1246,7 +1241,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/sam1.png" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/sam1.png" alt="ASEN Alumni Samuel" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Samuel Mbah - President of the National Society of Black Engineers, Unversity of Idaho Chapter</p>
                 </figure>
@@ -1261,7 +1256,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/sonia1.png" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/sonia1.png" alt="ASEN ALUMNI SONIA" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Sonia Bendre - Microsoft Intern, Co-founder of the Dartmouth robotics club(Dartmouth College)</p>
                 </figure>
@@ -1277,7 +1272,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/kosi1.png" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/kosi1.png" alt="ASEN ALUMNI KOSI" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Kosisochuwku Ugoriji - Davis Scholar Columbia Univesity
                     </p>
@@ -1294,7 +1289,7 @@
                 </blockquote>
                 <figure class="mb-4 d-flex align-items-center justify-content-center">
                     <div>
-                        <img src="images/ife1.png" alt="Image" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
+                        <img src="images/ife1.png" alt="ASEN ALUMNI IFE" class="w-50 img-fluid mb-3" data-pagespeed-url-hash="2735163746" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
                     </div>
                     <p>Ifeoluwa Aigbiniode - Princeton University, Executive Director star girls africa
                     </p>
@@ -1519,6 +1514,9 @@
                                 <!--<li>
                                     <a href="#home-section" class="smoothscroll">Activities</a>
                                 </li>-->
+                                <li>
+                                    <a href="#applications" class="smoothscroll">Applications</a>
+                                </li>
                                 <li>
                                     <a href="#faq-section" class="smoothscroll">FAQ</a>
                                 </li>
