--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
     <p class="lead">Our Achievements: A Measure of Our Success, a Testament to Our Growth, and a Celebration of Our Accomplishments.</p>
     <ul id="tab_list">
         <li>
-            <h3>REGISTERED</h3>
+            <h3>DIRECTLY IMPACTED</h3>
             <span data-target="6700" id="first_count">740</span><span>+</span>
         </li>
         <li>
