--- a/index.html
+++ b/index.html
@@ -882,16 +882,16 @@
     <p class="lead">Our Achievements: A Measure of Our Success, a Testament to Our Growth, and a Celebration of Our Accomplishments.</p>
     <ul id="tab_list">
         <li>
-            <h3>DIRECTLY IMPACTED</h3>
+            <h3>IMPACTED</h3>
             <span data-target="6700" id="first_count">740</span><span>+</span>
         </li>
         <li>
             <h3>TRAINED</h3>
-            <span data-target="2300" id="second_count">70</span><span>+</span>
+            <span data-target="2300" id="second_count">65</span><span>+</span>
         </li>
         <li>
             <h3>CERTIFIED</h3>
-            <span data-target="900" id="third_count">65</span><span>+</span>
+            <span data-target="900" id="third_count">70</span><span>+</span>
         </li>
     </ul>
     <script>
